GITBOOK-508: change request with no subject merged in GitBook